# zspie

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_build_all_platforms.yml
examples/: 01_expressions.zspie  02_globals.zspie  03_assignments.zspie  04_assignments.zspie  05_locals.zspie  06_if.zspie  07_if_else.zspie  08_and.zspie  09_or.zspie  10_while.zspie  11_for.zspie  12_function_declaration.zspie  13_non_returning_function_call.zspie  14_sum_function.zspie  15_fib_with_native.zspie  16_fact_with_native.zspie
src/: app.c  app.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
